app-manifest/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: hashicorp/http-echo
        args: ["-text='Auth Service!'"]
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
