app-manifest/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: hashicorp/http-echo
        args: ["-text='Notification Service!'"]
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
