app-manifest/results-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: results-service
  template:
    metadata:
      labels:
        app: results-service
    spec:
      containers:
      - name: results-service
        image: hashicorp/http-echo
        args: ["-text='Results Service!'"]
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
