app-manifest/auth-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
