app-manifest/biodata-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: biodata-service
spec:
  selector:
    app: biodata-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
