app-manifest/coursereg-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coursereg-service
spec:
  selector:
    app: coursereg-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
