app-manifest/notification-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
