app-manifest/portal-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
spec:
  selector:
    app: portal-frontend
  ports:
    - name: http
      port: 80
      targetPort: 5678
