app-manifest/results-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-service
spec:
  selector:
    app: results-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
